kubernetes/apps/self-hosted/miniflux/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  annotations:
    authentik.home.arpa/enabled: "true"
spec:
  hostnames:
    - "rss.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: ${APP}
          namespace: self-hosted
          port: ${APP_PORT}
